--- a/workspace/index.html
+++ b/workspace/index.html
@@ -11,11 +11,11 @@
         <section class="form-register">
             <h4>Formulario Registro</h4>
             <input class="controls" type="text"name="nombres" id="nombres" placeholder="Ingrese su Nombre">
-            <input classe="controls" type="text"name="Apellidos" id="Apellidos" placeholder="Ingrese su Apellido">
-            <input classe="controls"type="email"name="Correo" id="Correo" placeholder="Ingrese su Correo">
-            <input classe="controls" type="password"name="Correo" id="Correo" placeholder="Ingrese su Contraseña">
+            <input class="controls" type="text"name="Apellidos" id="Apellidos" placeholder="Ingrese su Apellido">
+            <input class="controls"type="email"name="Correo" id="Correo" placeholder="Ingrese su Correo">
+            <input class="controls" type="password"name="Correo" id="Correo" placeholder="Ingrese su Contraseña">
             <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</p>
-                <input class="botons  " type="submite" value="Registrar">
+                <input class="botons" type="submite" value="Registrar">
                 <p><a href="#">¿Ya Tengo Cuenta?</a></p>
 
         </section>
